04-k8s-cluster/misc/k8s-manifests/service-external-ips.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-hello-world
  labels:
    app: ruby
spec:
  selector:
    app: ruby
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
  externalIPs:
    - 192.168.99.135
