04-k8s-cluster/misc/k8s-manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: k8s-hello-world
  labels:
    app: ruby
spec:
  type: NodePort
  selector:
    app: ruby
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 30000
