04-k8s-cluster/misc/k8s-manifests/ingress2.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: traefik-ingress
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: web, websecure

    traefik.ingress.kubernetes.io/router.tls: "false"

spec:
  rules:
    - host: user.example.io
      http:
        paths:
        - path: /
          backend:
            serviceName: k8s-hello-world
            servicePort: http
